--- a/Desktop/create2/html/index.html
+++ b/Desktop/create2/html/index.html
@@ -7,6 +7,7 @@
     <title>>ドットインスオール</title>
 </head>
 <body>
+    <script type="text/javascript " src="app.js"></script>
     こんにちは
     こんにちは
     今日あh
